# reflective_agent

./: Cargo.toml  README.md
src/: main.rs  model.rs  provider.rs  runtime.rs  task.rs  utils.rs
src/config/: config.json  mod.rs
src/tasks/: test.json
src/tool/: draft.rs  human.rs  mod.rs  result.rs  shell.rs
