[package]
name = "llm_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
cached = "0.54.0"
clap = { version = "4.5.28", features = ["derive"] }
futures = "0.3.31"
log = "0.4.25"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simple_logger = "5.0.0"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
